testsuite/tests/linear/should_fail/LinearLet7.stderr

LinearLet7.hs:6:11: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from a non-linear pattern ‘_’
          (non-variable pattern bindings that have been generalised aren't linear)
    • In the expression: let %1 g = \ y -> ... in g x
      In an equation for ‘f’: f x = let %1 g = ... in g x

LinearLet7.hs:6:14: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘g’
    • In a pattern binding: g = \ y -> g y
      In the expression: let %1 g = \ y -> ... in g x
      In an equation for ‘f’: f x = let %1 g = ... in g x
